# memfd

./: CreateFlags.hsc  CreateFlagsType.hs  CreateOptionsFlags.hs  CreateOptionsType.hs  DefaultCreateOptions.hs  FileSystemType.hs  HugeTLBOptionsType.hs  HugeTLBSizeType.hs  Memfd.hs  NameType.hs  OnExecType.hs  SealingType.hs  SupportedHugeTLBSizes.hs  cabal.project  default.nix  memfd.cabal  readme.md
.github/workflows/: test.yml
memfd/: Create.hs  CreateFlags.hsc  CreateOptionsFlags.hs  CreateOptionsType.hs  FileSystemType.hs  HugeTLBOptionsType.hs  HugeTLBSizeType.hs  NameType.hs  SealingType.hs  changelog.md  memfd.cabal  readme.md
nix/: sources.json
